[package]
name = "map-creater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tail_server_url = { git = "https://github.com/SahiBkom/tail-server-url", package = "tail-server-url" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.6"
bytes ="*"
gpx = "0.9.1"